--- a/bank-api-minimal/appsettings.json
+++ b/bank-api-minimal/appsettings.json
@@ -57,7 +57,7 @@
       "Contact": {
         "Url": "https://www.guanchen.nl"
       },
-      "Description": "The Bank API is a design reference project suitable to bootstrap development for a complaint and modern API."
+      "Description": "The Bank API is a design reference project suitable to bootstrap development for a compliant and modern API."
     }
   }
 }
