--- a/bank-api-minimal/bank-api-minimal.csproj
+++ b/bank-api-minimal/bank-api-minimal.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.*-*" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.*-*" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.*-*" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.*-*" /> <!-- can be removed after Gridify fully supports asp.net 9 -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.*-*" /> <!-- can be removed after Gridify fully supports asp.net 9 -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.*-*" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.*-*">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
