--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,12 +12,13 @@
 			"settings": {
 				"terminal.integrated.shell.linux": "/bin/bash"
 			},
+
+			// excluded "ms-dotnettools.csdevkit" since it requested .NET 8.0
 			"extensions": [
 				"donjayamanne.githistory",
 				"github.copilot",
 				"humao.rest-client",
 				"ms-azuretools.vscode-docker",
-				"ms-dotnettools.csdevkit",
 				"ms-dotnettools.csharp",
 				"ms-vscode-remote.remote-containers"
 			]
@@ -42,5 +43,10 @@
 	"postCreateCommand": "npm install --verbose -g @stoplight/spectral-cli@^6.14.0",
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "vscode"
+	"remoteUser": "vscode",
+
+	// Mount your local .npmrc file into the devcontainer
+	"mounts": [
+		"source=${localEnv:HOME}/.npmrc,target=/home/vscode/.npmrc,type=bind,consistency=cached"
+	]
 }
