use Kiota extension and workspace instead of cli

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,6 @@
 {
 	"name": "Bank API dotnet9",
 	"image": "mcr.microsoft.com/devcontainers/dotnet:dev-9.0-noble",
-
 	"customizations": {
 		"vscode": {
 			"settings": {
@@ -15,11 +14,11 @@
 				"humao.rest-client",
 				"ms-azuretools.vscode-docker",
 				"ms-dotnettools.csdevkit", // brings along: ms-dotnettools.csharp, and ms-dotnettools.vscode-dotnet-runtime
-				"ms-vscode-remote.remote-containers"
+				"ms-vscode-remote.remote-containers",
+				"ms-graph.kiota"
 			]
 		}
 	},
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/dotnet:2": {
@@ -27,7 +26,6 @@
 		},
 		"ghcr.io/devcontainers/features/node:1": {}
 	},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [5000, 5001],
 	// "portsAttributes": {
@@ -35,14 +33,11 @@
 	//			"protocol": "https"
 	//		}
 	// }
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// Installation of spectral-cli may take a while (even when using a local package cache), so we use the verbose flag to show progress.
 	"postCreateCommand": "dotnet tool install --global Microsoft.OpenApi.Kiota && npm install --verbose -g @stoplight/spectral-cli@^6.14.0",
-
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	"remoteUser": "vscode",
-
 	// Mount your local .npmrc file into the devcontainer
 	"mounts": [
 		"source=${localEnv:HOME}/.npmrc,target=/home/vscode/.npmrc,type=bind,consistency=cached"
