--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,8 @@
 	"recommendations": [
 		"humao.rest-client",
 		"ms-dotnettools.csharp",
-		"ms-dotnettools.csdevkit"
+		"ms-dotnettools.csdevkit",
+		"ms-graph.kiota"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
