--- a/bank-api-minimal/bank-api-minimal.csproj
+++ b/bank-api-minimal/bank-api-minimal.csproj
@@ -26,6 +26,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.*-*" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.*" />
     <PackageReference Include="Microsoft.Kiota.Bundle" Version="1.15.*" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.10.*" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.10.*" />
