--- a/bank-api-minimal/appsettings.json
+++ b/bank-api-minimal/appsettings.json
@@ -59,5 +59,12 @@
       },
       "Description": "The Bank API is a design reference project suitable to bootstrap development for a compliant and modern API."
     }
+  },
+  "Services": {
+    "GitHub": {
+      "https": [
+        "https://api.github.com"
+      ]
+    }
   }
 }
