--- a/bank-api-minimal/appsettings.json
+++ b/bank-api-minimal/appsettings.json
@@ -66,5 +66,10 @@
         "https://api.github.com"
       ]
     }
+  },
+  "AzureServices": {
+    "BankStorage": {
+      "ServiceUri": "https://sabankapiprd001.blob.core.windows.net/"
+    }
   }
 }
