aspire for blob storage

--- a/bank-api-minimal/appsettings.json
+++ b/bank-api-minimal/appsettings.json
@@ -67,9 +67,7 @@
       ]
     }
   },
-  "AzureServices": {
-    "BankStorage": {
-      "ServiceUri": "https://sabankapiprd001.blob.core.windows.net/"
-    }
+  "ConnectionStrings": {
+    "BankStorage": "https://sabankapiprd001.blob.core.windows.net/"
   }
 }
