--- a/BankApi.Orchestration/BankApi.Orchestration.csproj
+++ b/BankApi.Orchestration/BankApi.Orchestration.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\bank-api-minimal\bank-api-minimal.csproj" />
+    <ProjectReference Include="..\BankApi.Service\BankApi.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
