--- a/BankApi.Orchestration/BankApi.Orchestration.csproj
+++ b/BankApi.Orchestration/BankApi.Orchestration.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="*" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.*" />
   </ItemGroup>
 
 </Project>
