--- a/BankApi.Service/BankApi.Service.csproj
+++ b/BankApi.Service/BankApi.Service.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
       <OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
-      <OpenApiDocumentsDirectory>../BankApi.Specs.Generated</OpenApiDocumentsDirectory>
+      <OpenApiDocumentsDirectory>../Specs.Generated</OpenApiDocumentsDirectory>
       <OpenApiGenerateDocumentsOptions>--file-name openapi</OpenApiGenerateDocumentsOptions>
   </PropertyGroup>
 
