--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/dotnet
 {
 	"name": "Bank API dotnet9",
-	"image": "mcr.microsoft.com/devcontainers/dotnet:dev-9.0-noble",
+	"image": "mcr.microsoft.com/devcontainers/dotnet:dev-9.0-bookworm", // bookworm is more up to date (with .NET SDK) than noble
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -28,10 +28,11 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/dotnet:2": {
-			"version": "9.0",
+			"version": "none", // already pre-installed with image
 			"aspNetCoreRuntimeVersions": "8.0" // for: https://github.com/microsoft/vscode-dotnettools/issues/1094
 		},
-		"ghcr.io/devcontainers/features/azure-cli": {} // for using the host az cli credentials
+		"ghcr.io/devcontainers/features/azure-cli:1": {}, // for using the host az cli credentials
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {} // for .NET Aspire resource emulation
 	},
 	"remoteUser": "root", //have to use root because of permission issue during dotnet build: https://github.com/microsoft/vscode-remote-release/issues/9099#issuecomment-2290470364
 	"mounts": [
