--- a/BankApi.Service/appsettings.Development.json
+++ b/BankApi.Service/appsettings.Development.json
@@ -6,5 +6,16 @@
     }
   },
   "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
-  "OTEL_SERVICE_NAME": "Bank API"
+  "OTEL_SERVICE_NAME": "Bank API",
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:5203",
+          "https://localhost:7247"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
+  }
 }
