--- a/Infra.Generated/aspire-manifest.json
+++ b/Infra.Generated/aspire-manifest.json
@@ -13,15 +13,39 @@
       "type": "value.v0",
       "connectionString": "{storage.outputs.blobEndpoint}"
     },
-    "BankApiService": {
+    "BankApiService-V1": {
       "type": "project.v0",
-      "path": "../BankApi.Service/BankApi.Service.csproj",
+      "path": "../BankApi.Service.V1/BankApi.Service.V1.csproj",
       "env": {
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES": "true",
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES": "true",
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
         "ASPNETCORE_FORWARDEDHEADERS_ENABLED": "true",
-        "HTTP_PORTS": "{BankApiService.bindings.http.targetPort}",
+        "HTTP_PORTS": "{BankApiService-V1.bindings.http.targetPort}",
+        "ConnectionStrings__BankStorage": "{BankStorage.connectionString}"
+      },
+      "bindings": {
+        "http": {
+          "scheme": "http",
+          "protocol": "tcp",
+          "transport": "http"
+        },
+        "https": {
+          "scheme": "https",
+          "protocol": "tcp",
+          "transport": "http"
+        }
+      }
+    },
+    "BankApiService-V2": {
+      "type": "project.v0",
+      "path": "../BankApi.Service.V2/BankApi.Service.V2.csproj",
+      "env": {
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
+        "ASPNETCORE_FORWARDEDHEADERS_ENABLED": "true",
+        "HTTP_PORTS": "{BankApiService-V2.bindings.http.targetPort}",
         "ConnectionStrings__BankStorage": "{BankStorage.connectionString}"
       },
       "bindings": {
