--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,7 +7,8 @@
 		"humao.rest-client",
 		"ms-dotnettools.csdevkit",
 		"ms-graph.kiota",
-		"stoplight.spectral"
+		"stoplight.spectral",
+		"ms-vscode-remote.remote-containers"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
