parameter-description rule

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -1,1 +1,11 @@
 extends: ["spectral:oas", "spectral:arazzo"]
+
+rules:
+  parameter-description:
+    description: All parameters should have a description
+    message: Parameter is missing a description.
+    severity: warn
+    given: $.paths.*.*.parameters[*]
+    then:
+      field: description
+      function: truthy
