--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,11 +4,12 @@
 	
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+		"ms-vscode-remote.remote-containers",
 		"humao.rest-client",
 		"ms-dotnettools.csdevkit",
 		"ms-graph.kiota",
 		"stoplight.spectral",
-		"ms-vscode-remote.remote-containers"
+		"streetsidesoftware.code-spell-checker"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
